--- a/questions.yml
+++ b/questions.yml
@@ -228,3 +228,23 @@
   category: Sobre o Líder
   created_at: '2017-11-18T14:26:14.149Z'
   updated_at: '2017-11-18T14:26:14.149Z'
+- id: 357
+  question: O que você quer estar fazendo em 5 anos? 10 anos? 3anos?
+  category: Desenvolvimento de Carreira
+  created_at: '2017-11-18T14:26:14.152Z'
+  updated_at: '2017-11-18T14:26:14.152Z'
+- id: 358
+  question: Quais são seus objetivos de longo prazo? Já pensou sobre eles?
+  category: Desenvolvimento de Carreira
+  created_at: '2017-11-18T14:26:14.155Z'
+  updated_at: '2017-11-18T14:26:14.155Z'
+- id: 419
+  question: Me conte algo...
+  category: Iniciando Conversas
+  created_at: '2017-11-18T14:26:14.513Z'
+  updated_at: '2017-11-18T14:26:14.513Z'
+- id: 420
+  question: Como você está? Como está a vida fora do trabalho?
+  category: Iniciando Conversas
+  created_at: '2017-11-18T14:26:14.516Z'
+  updated_at: '2017-11-18T14:26:14.516Z'
